--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
     "i18next-http-backend": "^3.0.2",
     "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.508.0",
+    "midtrans-client": "^1.4.2",
     "next": "^15.3.2",
     "next-auth": "^4.24.11",
     "next-i18next": "^15.4.2",
@@ -59,6 +60,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "@types/uuid": "^10.0.0",
     "autoprefixer": "^10.4.14",
     "cross-env": "^7.0.3",
     "eslint": "^9",
